<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wile</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="activity_add_label">Ajouter un exo</string>

    <string name="training_add_missing_name">Il faut au moins choisir un exercice</string>

    <string name="menu_training_main_go">Go</string>
    <string name="menu_training_main_parameters">Paramètres</string>
    <string name="save_training_btn">Sauvegarder</string>
    <string name="edit_training_toolbar_title">Mettre à jour un exo</string>
    <string name="save_new_training_btn">Ajouter</string>
    <string name="training_form_name_label">Nom de l\'exercice</string>
    <string name="training_form_duration_label">Durée</string>
    <string name="training_form_rep_label">Répétitions</string>
    <string name="training_form_reprate_label">Rep par minute</string>
    <string name="training_add_or">ou</string>
    <string name="training_form_reprate_toggle_label">Changer la vitesse de répétition</string>
    <string name="custom_training_btn">Autre</string>
    <string name="activity_quick_add_label">Ajout rapide</string>
    <string name="activity_tabata_add_label">Ajouter un tabata</string>
    <string name="training_tabata_missing_main">Il manque le nom du premier excercice</string>
    <string name="training_tabata_missing_alter">Il manque le nom du deuxieme excercice</string>
    <string name="training_tabata_error">Il y\'a un probleme, désolé</string>
    <string name="training_tabata_missing_duration">Il faut une durée supérieur à 0s</string>
    <string name="tabata_form_alter_label">Nom du second exercice</string>
    <string name="tabata_form_main_label">Nom du premier excercice</string>
    <string name="tabata_form_cycles_label">Nombre de cycles</string>
    <string name="training_timed_description">Tenir jusqu\'au bout</string>
    <string name="training_tabata_description">%ds/%ds x %d - %s et %s</string>
    <string name="training_repeated_description">%d reps</string>
    <string name="overall_duration">%dm%02ds</string>
    <string name="workout_tap_to_end_reps">Tap quand tu as fini l\'excercice</string>
    <string name="workout_im_done">J\'ai fini!</string>
    <string name="workout_go_till_the_end">∞</string>
    <string name="chronometer_format">Durée totale de l\'entrainement: %s</string>
    <string name="activity_social_join_label">Entrainement entre amis</string>
    <string name="social_join_username">Votre pseudo</string>
    <string name="social_join_room">Rejoindre une salle</string>
    <string name="social_join_btn">Rejoindre</string>
    <string name="social_create_btn">Créer</string>
    <string name="social_how_to_join">Saisissez un pseudo et le code d\'une salle d\'entrainement à rejoindre.</string>
    <string name="social_how_to_create">Créer une salle d\'entrainement</string>
    <string name="activity_workout_label">Au travail !</string>
    <string name="delete_workout">Supprimer l\'entrainement</string>
    <string name="share_workout">Partager l\'entrainement</string>
    <string name="no_excercice">Il n\'y a aucun exercice dans cet entrainement</string>
    <string name="workout_press_play_ready">Appuies sur Play quand t\'es prêt-e à te lancer</string>
    <string name="add_training">Ajouter un exercice</string>
    <string name="empty_userid">Il manque votre pseudo</string>
    <string name="empty_room_name">Il manque le code de la salle</string>
    <string name="ws_connection_list">Connexion au serveur perdues [%s]</string>
    <string name="social_workout_connect_label">Salle d\'entrainement</string>
    <string name="go_social_btn_label">Choisir l\'entrainement</string>
    <string name="wait_social_btn_label">En attente que l\'hôte lance l\'entrainement</string>
    <string name="room_someone_has_joined">%s a rejoint la salle</string>
    <string name="room_created">La salle %s a bien été crée</string>
    <string name="pong_received">Message PONG</string>
    <string name="ws_unknown_message">Message inconnu</string>
    <string name="room_someone_has_left">%s a quitté la salle</string>
    <string name="waiting_for_pals">En attente de copains… Lancez l\'entrainement quand vous êtes tous là</string>
    <string name="no_workout_service">Erreur avec le service</string>
    <string name="social_ready_to_begin">L\'hote va bientôt lancer l\'entrainement, préparez vous !</string>
    <string name="social_skip_denied_not_host">Seul l\'hôte de la salle peut skip</string>
    <string name="social_start_pause_denied_not_host">Seul l\'hôte peut lancer ou mettre en pause l\'entrainement</string>
    <string name="room_name_share">Partager le nom de la salle</string>
    <string name="room_leave_button_label">Se déconnecter de la salle</string>
    <string name="visual_element">Element visuel</string>
    <string name="share_room_text">"Rejoins moi sur Wile pour un entrainement. Mon code salle est %s "</string>
    <string name="share_workout_message">Partager mon Entrainement</string>
    <string name="activity_import">Importer un entrainement</string>
    <string name="import_failed">Impossible d\'importer l\'entrainement</string>
    <string name="import_success">L\'entrainement a bien été importé</string>

    <string name="training_number">"Entrainement #%d"</string>
    <string name="no_training_added">Avant de pouvoir lancer l\'entrainement, il faut y mettre des exercices. Le + en bas à droite est là pour çà</string>
    <string name="illustration">illustration</string>
    <string name="delete_last_training">Cela va entrainer la suppression de l\'entrainement</string>
    <string name="delete">Supprimer</string>
    <string name="cancel">Conserver</string>
    <string name="activity_reminders_label">Rappels</string>
    <string name="reminder_explain">Ne ratez jamais cet entrainement, mettez un rappel automatique hebdomadaire</string>
    <string name="reminder_form_time">Heure du rappel</string>
    <string name="reminder_title">Rappel pour l\'Entrainement #%d</string>
    <string name="reminder_time_picker_title">A quelle heure ?</string>
    <string name="reminder_active_label">Activer le rappel</string>
    <string name="reminder_monday">Lundi</string>
    <string name="reminder_tuesday">Mardi</string>
    <string name="reminder_wednesday">Mercredi</string>
    <string name="reminder_thursday">Jeudi</string>
    <string name="reminder_friday">Vendredi</string>
    <string name="reminder_saturday">Samedi</string>
    <string name="reminder_sunday">Dimanche</string>
    <string name="reminder_hour_label">Heure du rappel</string>
    <string name="time_format">%02d:%02d</string>
    <string name="alarm_notification_channel">Rappel d\'entrainement</string>
    <string name="alarm_notification_title">C\'est l\'heure de l\'entrainement</string>
    <string name="alarm_notification_text">Vous aviez prévu de vous entrainer aujourd\'hui, tapez la notification pour lancer l\'entrainement, et aller vous préparer !</string>
    <string name="alarm_notification_sub_text">Un peu de sport</string>
</resources>
